Fix syntax error and use local images

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>WASH MOTORS - Tu Comodidad Nuestra Prioridad</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Iso_WashMotors-LOGO.png">
+    <link rel="icon" type="image/png" href="/img/Iso_WashMotors.png">
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -45,7 +45,7 @@
                 <!-- Logo -->
                 <div class="flex items-center">
                     <a href="#inicio" aria-label="Ir al inicio">
-                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Logotipo%20blanco%20Wash%20Motors-WHITE-LOGO.png" alt="WASH MOTORS Logo" class="h-12 md:h-16">
+                        <img src="/img/Logotipo_blanco.png" alt="WASH MOTORS Logo" class="h-12 md:h-16">
                     </a>
                 </div>
 
@@ -95,7 +95,7 @@
     <section id="inicio" class="bg-white pt-16 md:pt-16 bg-gray-50">
         <div class="relative h-[30vh] md:h-[50vh] overflow-hidden shadow-xl">
             <!-- Fondo imagen -->
-            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('https://hebbkx1anhila5yf.public.blob.vercel-storage.com/imagen_fondo-HERO.png');">
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('/img/imagen_fondo.png');">
             </div>
             <div class="absolute inset-0 bg-white/10"></div>
             <!-- Contenido -->
@@ -337,11 +337,11 @@
                 <div class="relative">
                     <div class="relative overflow-hidden rounded-2xl bg-gray-200 h-64 md:h-80">
                         <div class="carousel-container relative w-full h-full" id="imageCarousel">
-                            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/vonixx.webp" alt="Productos" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-100">
-                            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/movil.png" alt="Móvil" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-0">
-                            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/equipo.png" alt="Equipo" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-0">
-                            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/lavando.png" alt="Lavando" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-0">
-                            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/detalles.png" alt="Detalles" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-0">
+                            <img src="/img/vonixx.webp" alt="Productos" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-100">
+                            <img src="/img/movil.png" alt="Móvil" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-0">
+                            <img src="/img/equipo.png" alt="Equipo" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-0">
+                            <img src="/img/lavando.png" alt="Lavando" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-0">
+                            <img src="/img/detalles.png" alt="Detalles" class="carousel-slide w-full h-full object-cover absolute transition-opacity duration-500 opacity-0">
                         </div>
 
                         <!-- Dots Indicator -->
@@ -425,7 +425,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
                 <!-- Logo & Description -->
                 <div>
-                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Logotipo%20Wash%20Motors_azul-BLOFY7zVPddQlEoCa8XqoO94RodFUi.png" alt="WASH MOTORS" class="h-12 mb-4">
+                    <img src="/img/Logotipo_azul.png" alt="WASH MOTORS" class="h-12 mb-4">
                     <p class="text-gray-400">
                         Tu comodidad nuestra prioridad. Servicio de lavado profesional a domicilio.
                     </p>
